--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <span id="seconds"></span>
       <div>Seconds</div>
     </div>
-  </div>
+  <!-- </div>
   <div id="comment-wall">
     <h2>Comment Wall</h2>
     <form id="comment-form">
       <input type="text" id="comment-input" placeholder="Enter your comment">
       <button type="submit">Submit</button>
     </form>
-    <ul id="comments-list"></ul>
+    <ul id="comments-list"></ul> -->
   </div>
   <script src="script.js"></script>
 </body>
