add Roman's image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <span id="seconds"></span>
       <div>Seconds</div>
     </div>
+
+    <img src="Roman.jpg" alt="Image" width="400">
   <!-- </div>
   <div id="comment-wall">
     <h2>Comment Wall</h2>
